Started laying out first two sections of HTML and styling through CSS

--- a/index.html
+++ b/index.html
@@ -3,9 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>365 Training</title>
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <div class="webname">
+                <h2>365 Training</h2>
+            </div>
+            <div class="links">
+                <a href="#home">Home</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+                <a href="#projects">Projects</a>
+            </div>
+        </nav>
+    </header>
+    <section id="home">
+        <div class="top bgimg">
+            <div class="top-text">
+                <h1>Premier Personal Training</h1>
+                <button>Schedule Now!</button>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="container">
+            <div class="project1">
+
+            </div>
+            <div class="project2">
+
+            </div>
+            <div class="project3">
+
+            </div>
+            <div class="project4">
+
+            </div>
+            <div class="project5">
+
+            </div>
+            <div class="project6">
+
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="bottom">
+            <button>Contact Me</button>
+        </div>
+    </footer>
 </body>
 </html>
