--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--Google Fonts-->
+
+    <!--Stylesheet-->
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
     <h1> PROJECTS </h1>
