Added info in the projects section, continuing to style through CSS to match the wireframe

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>365 Training</title>
+    <title>Ryan's Portfolio</title>
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <div class="webname">
-                <h2>365 Training</h2>
+                <h2>Portfolio Project</h2>
             </div>
             <div class="links">
                 <a href="#home">Home</a>
@@ -28,30 +28,39 @@
     <section id="home">
         <div class="top bgimg">
             <div class="top-text">
-                <h1>Premier Personal Training</h1>
-                <button>Schedule Now!</button>
+                <h1>My name is Ryan!</h1>
+                <button>Check out my projects!</button>
             </div>
         </div>
     </section>
     <section id="projects">
         <div class="container">
-            <div class="project1">
-
+            <div class="project">
+                <div class="image1 bgimg">
+                </div>
+                <p>Coniferous trees always make me feel at home</p>
             </div>
-            <div class="project2">
-
+            <div class="project">
+                <div class="image2 bgimg">
+                </div>
+                <p>Astronomy is one of my interests</p>
             </div>
-            <div class="project3">
-
+            <div class="project">
+                <div class="image3 bgimg"></div>
+                <p>My hometown of Eagle River, AK</p>
             </div>
-            <div class="project4">
-
+            <div class="project">
+                <div class="image4 bgimg"></div>
+                <p>I love to backcountry snowboard</p>
             </div>
-            <div class="project5">
-
+            <div class="project">
+                <div class="image5 bgimg"></div>
+                <p>Project 5</p>
             </div>
-            <div class="project6">
-
+            <div class="project">
+                <div class="image6 bgimg">
+                </div>
+                <p>Project 6</p>
             </div>
         </div>
     </section>
