Finished HTML, adding finishing touches with CSS styling.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             </div>
             <div class="links">
                 <a href="#home">Home</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
-                <a href="#projects">Projects</a>
+                <a href="about.html" target="_blank">About</a>
+                <a href="contact.html" target="_blank">Contact</a>
+                <a href="projects.html" target="_blank">Projects</a>
             </div>
         </nav>
     </header>
@@ -29,7 +29,7 @@
         <div class="top bgimg">
             <div class="top-text">
                 <h1>My name is Ryan!</h1>
-                <button>Check out my projects!</button>
+                <a class="button" href="projects.html" target="_blank">My projects!</a>
             </div>
         </div>
     </section>
@@ -51,22 +51,25 @@
             </div>
             <div class="project">
                 <div class="image4 bgimg"></div>
-                <p>I love to backcountry snowboard</p>
+                <p>In the winter I love to backcountry snowboard</p>
             </div>
             <div class="project">
                 <div class="image5 bgimg"></div>
-                <p>Project 5</p>
+                <p>In the summer I enjoy mountain biking </p>
             </div>
             <div class="project">
                 <div class="image6 bgimg">
                 </div>
-                <p>Project 6</p>
+                <p>I weight train to stay healthy</p>
             </div>
         </div>
     </section>
     <footer>
         <div class="bottom">
-            <button>Contact Me</button>
+            <a class="button" href="contact.html" target="_blank">Contact Me</a>
+            <div class="socials">
+                <a href="https://www.linkedin.com/in/ryan-mark-7a1460169/" target="_blank">LinkedIn</a>
+            </div>
         </div>
     </footer>
 </body>
