--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Portfolio</title>
     <!--Google Fonts-->
@@ -15,7 +16,7 @@
     <header>
         <nav class="navbar">
             <div class="webname">
-                <h2>Portfolio Project</h2>
+                <h2>Ryan Mark</h2>
             </div>
             <div class="links">
                 <a href="#home">Home</a>
